--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
+displayName=Lizardman Shaman Minion Spawn Sound
+author=LillieH001
+support=https://github.com/LillieH001/Lizardman-Shaman-Minion-Spawn-Sound
+description=Plays a sound whenever a minion from Lizardman Shaman spawns
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.lizardmanshamanminionspawnsound.lizardmanshamanminionspawnsoundplugin
